# beesbuddy-bumblebee

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml
migrations/: 20230411123929_create_subscriptions_table.sql  20230414113542_alter_subscriptions_table_for_table_rename.sql  20230428065123_add_listener_trigger_for_subscriptions.sql  20230503083346_add_trigger_to_subscriptions_table.sql  20230510182755_add_device_name_and_topic.sql  20230510183333_add_constraints_not_null_for_device_name_and_prefix.sql  20230510183803_update_trigger_function.sql
scripts/: init_db.sh  init_redis.sh
src/: application.rs  configuration.rs  influxdb_client.rs  lib.rs  listener.rs  main.rs  startup.rs  telemetry.rs  utils.rs  worker.rs
src/domain/: email.rs  hive_data.rs  id.rs  mod.rs  new_topic_subscriber.rs  subscriber_topic.rs  username.rs  uuid.rs
src/routes/: mod.rs
src/routes/admin/: dashboard.rs  mod.rs  subscriptions.rs
src/routes/admin/subscriptions/: mod.rs  topics.rs
src/routes/home/: home.html  mod.rs
src/workers/: mod.rs  mqtt_worker.rs  subscriptions_worker.rs
tests/api/: admin_dashboard.rs  admin_subscriptions.rs  admin_subscriptions_topics.rs  helpers.rs  main.rs
tests/web/: helpers.rs
ui/: index.html
web/: index.html  package-lock.json
web/src/: home.hbs
