[package]
name = "beesbuddy-bumblebee"
version = "0.1.0"
edition = "2021"
authors = ["Viktor Nareiko <vnareiko.lt@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "beesbuddy-bumblebee"

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
serde-aux = "4"
unicode-segmentation = "1.7.1"
validator = "0.16"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
thiserror = "1.0.40"

[dev-dependencies]
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "2.5.0"
once_cell = "1.7.2"
wiremock = "0.5"
serde_json = "1.0.61"
reqwest = { version = "0.11", features = ["json"] }
linkify = "0.9"
